remove openFile buttun element from hiddenLargeView class

--- a/embed/pdfjs-latest/web/custom.css
+++ b/embed/pdfjs-latest/web/custom.css
@@ -1,7 +1,8 @@
 button#presentationMode,
 button#print,
 button#download,
-a#viewBookmark
+button#secondaryToolbarToggle,
+#viewBookmark
 {
-  display: none;
+  display: none !important;
 }
