--- a/src/pdfjs/web/custom.css
+++ b/src/pdfjs/web/custom.css
@@ -11,3 +11,37 @@ button#secondaryToolbarToggle,
 {
   background-color: #f4f4f4;
 }
+
+
+button#openFile::before{
+  display:none;
+}
+
+button#openFile{
+  background-color: #f4f4f4;
+}
+
+button#openFile:hover{
+  background-color: #f4f4f4;
+}
+
+#custom-css-open-file-label{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  display: inline-block;
+  padding: 7px 20px;
+  border-radius: 25px;
+  border: solid 2px #5eca56;
+  text-decoration: none;
+  color: #5eca56;
+  background-color: #f4f4f4;
+}
+
+#custom-css-open-file-label:hover{
+  box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+  color: rgba(172, 211, 169, 100);
+  border-color: rgba(172, 211, 169, 100);
+}
